--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
                         <div class="arrowpart"></div>
                         <div class="exCon">
-                            <h4>优秀学</h4>
+                            <h4>优秀学生</h4>
                             <h5>三等奖</h5>
                             <p>2017-2018第一学期学校荣获“优秀学生”三等奖学金</p>
                         </div>
