--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                     </div>
                 </div>
                 <div class="bannerText container">
-                    <h1>我叫肖芳波
+                    <h1>我叫梦里北极光
                     </h1>
-                    <p>毕业于桂林电子科技大学信息科技学院。乐于尝试新技术，学习能力强，应聘前端开发工程师，
+                    <p>毕业于桂林。乐于尝试新技术，学习能力强，应聘前端开发工程师，
                     </p>
                     <a href="#aboutme" class="mbnt">关于我</a>
                     
