--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="http://cody1991.github.io/favicon.ico" />
+    <link rel="shortcut icon" href="https://github.com/xfbxfbxfb/picture/blob/master/img/TIM%E5%9B%BE%E7%89%8720171228100959.jpg?raw=true" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>web前端求职简历新版</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
