--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         </div>
                         <div id="description">
                             <p>
-                                我是梦里北极光，2019年的桂林电子科技大学信息科技学院机械电子工程本科毕业生，在学校虽然是机械电子专业，但自从大一下学期进入了
+                                我是梦里北极光，2019年的桂林某本科毕业生，在学校虽然是机械电子专业，但自从大一下学期进入了
                             </p>
                             <p>
                  我院的机器人研究中心软件组，就一直在学习关于软件的方面，并且有着浓厚的兴趣。从大一下学期到大二上学期学习java基础,期间用java做过tcp协议的聊天室和udp协议的聊天室
