--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="bannerText container">
                     <h1>我叫梦里北极光
                     </h1>
-                    <p>毕业于桂林。乐于尝试新技术，学习能力强，应聘前端开发工程师，
+                    <p>毕业于中国。乐于尝试新技术，学习能力强，应聘前端开发工程师，
                     </p>
                     <a href="#aboutme" class="mbnt">关于我</a>
                     
@@ -91,7 +91,7 @@
                         </div>
                         <div id="description">
                             <p>
-                                我是梦里北极光，2019年的桂林某本科毕业生，在学校虽然是机械电子专业，但自从大一下学期进入了
+                                我是梦里北极光，2019年的中国某本科毕业生，在学校虽然是机械电子专业，但自从大一下学期进入了
                             </p>
                             <p>
                  我院的机器人研究中心软件组，就一直在学习关于软件的方面，并且有着浓厚的兴趣。从大一下学期到大二上学期学习java基础,期间用java做过tcp协议的聊天室和udp协议的聊天室
@@ -232,9 +232,9 @@
                     <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
                         <div class="arrowpart"></div>
                         <div class="exCon">
-                            <h4>第五届广西高校大学生创新与制作大赛</h4>
+                            <h4>第五届高校大学生创新与制作大赛</h4>
                             <h5>省二等奖</h5>
-               				<p>在2017第五届广西高校大学生创新与制作大赛荣获二等奖：作品“智能管道清洗机器人”主要负责程序编写及组装。</p>
+               				<p>在2017第五届高校大学生创新与制作大赛荣获二等奖：作品“智能管道清洗机器人”主要负责程序编写及组装。</p>
                         </div>
                     </div>
                 </div>
@@ -369,7 +369,7 @@
             <div class="container">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <h4>联系方式</h4>
-                    <p> <i class="icon icon-envelope"></i><a>1055153451@qq.com</a></p>
+                    <p> <i class="icon icon-envelope"></i><a>xx@qq.com</a></p>
                     <p> <i class="icon icon-link"></i><a href="http://xfbxfbxfb.github.io/index.html">http://xfbxfbxfb.github.io/</a>
                     </p>
                 </div>
